--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <script type="text/javascript" src="./AssetManager.js"></script>
     <script type="text/javascript" src ="./Background.js"></script>
     <script type="text/javascript" src="./Animation.js"></script>
+    <script type="text/javascript" src="./PlayerPingBlock.js"></script>
+    <script type="text/javascript" src="./AgentPingBlock.js"></script>
+    <script type="text/javascript" src="./PingBall.js"></script>
+    <script type="text/javascript" src="./BoundingBox.js"></script>
+
 
     <script type="text/javascript" src="./Main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" tabindex="1" width="1400" height="700" style="border: 1px solid brown; background: lightskyblue"></canvas>
+    <canvas id="gameWorld" tabindex="1" width="1000" height="720" style="border: 1px solid brown; background: lightskyblue"></canvas>
 </body>
 </html>
