--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
+    <script type="text/javascript"src="http://localhost:8888/socket.io/socket.io.js"></script>
+
     <script type="text/javascript" src="./GameEngine.js"></script>
     <script type="text/javascript" src="./AssetManager.js"></script>
     <script type="text/javascript" src ="./Background.js"></script>
@@ -12,10 +14,11 @@
     <script type="text/javascript" src="./PingBall.js"></script>
     <script type="text/javascript" src="./BoundingBox.js"></script>
 
-
     <script type="text/javascript" src="./Main.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" tabindex="1" width="1000" height="720" style="border: 1px solid brown; background: lightskyblue"></canvas>
 </body>
 </html>
+
+
