--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
-    <script type="text/javascript"src="http://localhost:8888/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
 
     
     <script type="text/javascript" src="./GameEngine.js"></script>
