--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
     <script type="text/javascript" src="./Main.js"></script>
 </head>
+
+
+<body>
+    <div id = "text"></div>
+    <button id="save" type="button">Save</button>
+    <button id="load" type="button">Load</button>
+</body>
+</html>
+
 <body>
     <canvas id="gameWorld" tabindex="1" width="1000" height="720" style="border: 1px solid brown; background: lightskyblue"></canvas>
 </body>
